# cend

./: .gitignore  GREY_MORPHO_FIX.md  MIGRATION.md  README.md  Untitled.ipynb  VERSIONING_GUIDE.md  _io.py  cevd.ipynb  cevd.py  distance_fields.ipynb  dst_fields.py  graphs.py  image_io.py  makefile  pipeline_swc.py  pyproject.toml  requirements.txt  swc.py  tests.txt  tests_analysis.ipynb  vfc.ipynb  vfc.py  visualize.py
_old_modules/: graphs.py  pipeline_swc.py  swc.py  vector_fields.py  visualize.py
data/GoldStandardReconstructions/: OP_2.swc  OP_3.swc  OP_4.swc  OP_5.swc  OP_6.swc  OP_7.swc  OP_8.swc  OP_9.swc
data/OP_2/: 1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  2.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  3.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  4.tif  40.tif  41.tif  42.tif  43.tif  44.tif  45.tif  (+48 more)
data/OP_3/: 1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  2.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  3.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  4.tif  40.tif  41.tif  42.tif  43.tif  44.tif  45.tif  (+23 more)
data/OP_4/: 01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  47.tif  50.tif  51.tif  (+3 more)
data/OP_5/: 1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  2.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  3.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  4.tif  40.tif  41.tif  42.tif  43.tif  44.tif  45.tif  (+36 more)
data/OP_6/: 1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  2.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  3.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  4.tif  40.tif  41.tif  42.tif  43.tif  44.tif  45.tif  (+58 more)
data/OP_7/: 01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  40.tif  (+32 more)
data/OP_8/: 01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  40.tif  (+46 more)
data/OP_9/: 01.tif  02.tif  03.tif  04.tif  05.tif  06.tif  07.tif  08.tif  09.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  40.tif  (+53 more)
notebooks/: distance_fields.ipynb  greyscale.ipynb  pipeline_interactive.ipynb  tests_analysis.ipynb
notebooks/research/: cevd.py
scores/: scores.csv  scores_frangi_yang_sesz_2_pt_10.csv  scores_frangi_yang_sesz_6_pt_0.csv  scores_frangi_yang_sesz_6_pt_5.csv  scores_updated.csv
src/cend/: __init__.py
src/cend/cli/: commands.py
src/cend/core/: __init__.py  distance_fields.py  filters.py  segmentation.py  skeletonization.py  utils.py
src/cend/frangi/: __init__.py  frangi.py  hessian.py  utils.py
src/cend/io/: __init__.py  image.py
src/cend/processing/: __init__.py  multiscale.py  pipeline.py
src/cend/structures/: __init__.py  graph.py
src/cend/visualization/: __init__.py  rendering.py
