[project]
name = "cend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict==2.4.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "configargparse==1.7.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dash==4.0.0",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "flask==3.1.2",
    "fonttools==4.61.1",
    "idna==3.11",
    "imageio==2.37.2",
    "importlib-metadata==8.7.1",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "narwhals==2.16.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "open3d==0.19.0",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "pip==25.0.1",
    "platformdirs==4.7.0",
    "plotly==6.5.2",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "pyquaternion==0.9.9",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "retrying==1.4.2",
    "rpds-py==0.30.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "setuptools==82.0.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tifffile==2026.1.28",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "uv==0.10.2",
    "wcwidth==0.6.0",
    "werkzeug==3.1.5",
    "widgetsnbextension==4.0.15",
    "zipp==3.23.0",
]
